<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShopAssistant</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="slidemenu_title">购物助手，敬请期待！</string>
    <string name="common">常用</string>
    <string name="setting">设置</string>
    <string name="input_hint">请输入商品名称</string>
    <string name="home_title">购物助手-货比三家再下手</string>
    <string name="search">开始吧</string>
    <string name="goodPrice">商品价格：</string>
    <string name="goodOriginPrice">原价：</string>
    <string name="goodID">商品ID：</string>
    <string name="start">立即体验</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="forget_password">忘记密码</string>
    <string name="register">注册</string>
    <string name="click_to_login">点击登录</string>
    <string name="ok">操作成功！</string>
    <string name="no">操作失败！</string>
    <string name="profile">个人中心</string>

</resources>
