<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:background="@drawable/slidemenu_background">

    <!-- 顶部头像，姓名，标签 -->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <!-- 头像 -->
        <ImageView
            android:id="@+id/img_icon_top"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_centerVertical="true"
            android:src="@drawable/avatar"
            />
        <!-- 名字 -->
        <TextView
            android:id="@+id/tv_name_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_to_login"
            android:layout_toRightOf="@id/img_icon_top"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dip"
            android:textColor="@color/white"/>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- 常用 -->
        <TextView
            android:id="@+id/left_tv_commom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="3dip"
            android:paddingLeft="20dip"
            android:paddingTop="3dip"
            android:text="@string/common"
            android:textColor="@color/white"/>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/divider_line"/>
        <!-- 常用列表 --><!-- 常用列表与更多列表使用同一个item布局 自定义适配器 -->
        <ListView
            android:id="@+id/listview_common"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="#00000000"
            android:divider="@drawable/divider_line_2"/>


        <!-- 设置 -->
        <TextView
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="3dip"
            android:paddingLeft="20dip"
            android:paddingTop="3dip"
            android:text="@string/setting"
            android:textColor="@color/white"/>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/divider_line"/>

        <ListView
            android:id="@+id/listview_setting"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="#00000000"
            android:divider="@drawable/divider_line_2"/>
    </LinearLayout>


</LinearLayout>